Supercluster/Cluster01/WebServer004/Deployment.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver004-deployment
  namespace: webserver004
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver004
  template:
    metadata:
      labels:
        app: webserver004
    spec:
      containers:
        - name: webserver004-container
          image: "ghcr.io/eliasdh-com/levelupbe-frontend:latest"
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
