Supercluster/Cluster01/WebServer004/Service.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/11/2024        #
############################
---
apiVersion: v1
kind: Service
metadata:
  name: webserver004-service
  namespace: webserver004
spec:
  selector:
    app: webserver004
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
