Supercluster/Cluster01/WebServer004/Ingress.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver004-ingress
  namespace: webserver004
  annotations:
    cert-manager.io/issuer: "webserver004-letsencrypt-issuer"
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Redirect HTTP to HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - levelup.be
      secretName: levelupbe-tls
    - hosts:
      - www.levelup.be
      secretName: wwwlevelupbe-tls
  rules:
    - host: levelup.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver004-frontend-service
                port:
                  number: 80
    - host: www.levelup.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver004-frontend-service
                port:
                  number: 80
---
